test/fail/send-in-par.mo
ignore (with cycles = await async 42) async 25
